--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://kalpit:mrunu2122@website-template.h8j5ehm.mongodb.net/?retryWrites=true&w=majority&appName=website-template
 PORT=5001
+
+GEMINI_API_KEY=AIzaSyB0haYuRiU20NbIrGsHspF6O-7i6sQff20
